--- a/main.html
+++ b/main.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" type="text/css" />
-
-    <title>Document</title>
-  </head>
-  <body>
-    <h2>Infinite Scroll</h2>
-    <main>
-      <ol id="infi-list"></ol>
-    </main>
-    <script src="./script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Infinite Scroll</title>
+  <style>
+    #infinite-list {
+      height: 300px;
+      overflow-y: auto;
+      border: 2px solid black;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+    #infinite-list li {
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
+</head>
+<body>
+  <h2>Infinite Scroll</h2>
+  <ul id="infinite-list"></ul>
+  <script src="script.js"></script>
+</body>
 </html>
