--- a/main.html
+++ b/main.html
@@ -1,26 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Infinite Scroll</title>
-  <style>
-    #infinite-list {
-      height: 300px;
-      overflow-y: auto;
-      border: 2px solid black;
-      padding: 0;
-      margin: 0;
-      list-style: none;
-    }
-    #infinite-list li {
-      padding: 15px;
-      border-bottom: 1px solid #ddd;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>Infinite Scroll</h2>
-  <ul id="infinite-list"></ul>
+  <h1>Infinite Scroll</h1>
+  <ul id="infi-list"></ul>
   <script src="script.js"></script>
 </body>
 </html>
